engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__mcp_server_elicitation__tests__mcp_server_elicitation_message_only_form_with_persist_options.snap
---
source: tui/src/bottom_pane/mcp_server_elicitation.rs
expression: "render_snapshot(&overlay, Rect::new(0, 0, 120, 16))"
---
                                                                                                                        
  Field 1/1                                                                                                             
  Boolean elicit MCP example: do you confirm?                                                                           
  › 1. Allow                   Allow this request and continue                                                          
    2. Allow for this session  Allow this request and remember this choice for this session                             
    3. Always allow            Allow this request and remember this choice for future requests                          
    4. Deny                    Decline this request and continue                                                        
    5. Cancel                  Cancel this request                                                                      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter to submit | esc to cancel
